--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 .body
 {
-    background: url(../img/bg.jpg);
+    background: url(../img/img_snake.jpg);
     min-height: 100vh;
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
@@ -36,6 +36,7 @@
     background:linear-gradient(rgb(116, 240, 116),rgb(172, 172, 62));
     width: 90vmin;
     height: 92vmin;
+    margin-right: 90vmin;
     border: 2px solid black;/*to give black color border to the board */
     display: grid;
     grid-template-columns: repeat(18,1fr);/*these 2 line will divide the grid in 18*18 size matrix means 18 rows and 18 columns*/
